# address-management-api

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 489a31f22d12_create_initial_tables.py
src/app/: main.py
src/app/api/v1/: routers.py
src/app/api/v1/endpoints/: addresses.py
src/app/core/: config.py
src/app/core/db/: database.py
src/app/crud/: address_validation.py
src/app/models/: __init__.py  address_recognition.py  address_validation.py  base.py
src/app/schemas/: addresses.py
src/app/services/: address_recognition.py  address_validation.py
src/app/workers/: arq_worker.py  jobs.py
